@@ -1,3 +1,8 @@
+2000-10-22  Michael Hanni <mhanni@sprintmail.com>
+
+	* nstabview.m: add 'Change Tab Font' menu item to use the font
+	panel to change the font the NSTabView uses to draw the tabs.
+
 2000-10-21  Adam Fedor  <fedor@gnu.org>
 
 	* GNUmakefile, GNUmakefile.preamble. Remove unused includes
